--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="style.css">
 
 		<title>{{ page.title | default: site.title }}</title>
 
@@ -39,7 +39,7 @@
 		{{ content }}
 
 		<footer>
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row align-items-center">
 					<div class="col">
 						<small>Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</small>
@@ -58,6 +58,6 @@
 			</div>
 		</footer>
 
-		<script src="/js/bootstrap-5.1.3.bundle.min.js"></script>
+		<script src="js/bootstrap-5.1.3.bundle.min.js"></script>
 	</body>
 </html>
