--- a/_layouts/section-centered.html
+++ b/_layouts/section-centered.html
@@ -1,6 +1,6 @@
 <div id="{{ page.anchor }}" class="row vh-100 align-items-center text-center">
 	<div class="col">
-		<h1>{{ page.title }}</h1>
+		<h1 class="text-uppercase">{{ page.title }}</h1>
 		<p class="fst-italic text-muted">{{ page.subtitle }}</p>
 		<div>{{ content }}</div>
 	</div>
