Made the footer fluid.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 		{{ content }}
 
 		<footer>
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row align-items-center">
 					<div class="col">
 						<small>Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</small>
