Bunch of changes. So many...

--- a/_layouts/section-centered.html
+++ b/_layouts/section-centered.html
@@ -1,4 +1,4 @@
-<div id="{{ page.anchor }}" class="row vh-100 align-items-center text-center">
+<div id="{{ page.anchor }}" class="row align-items-center text-center my-5 py-5">
 	<div class="col">
 		<h1 class="text-uppercase">{{ page.title }}</h1>
 		<p class="fst-italic text-muted">{{ page.subtitle }}</p>
