--- a/style.scss
+++ b/style.scss
@@ -6,14 +6,13 @@
 @import "bootstrap-5.1.3/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
+body {
+	margin-top: 56px;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 .navbar-brand {
 	font-family: "Kaushan Script";
-}
-
-#services img {
-	width: 120px;
-	height: 120px;
 }
 
 .my-circle {
@@ -21,11 +20,15 @@
 	@extend .justify-content-center;
 	@extend .align-items-center;
 	@extend .rounded-circle;
-	width: 180px;
-	height: 180px;
+	width: 140px;
+	height: 140px;
 	& svg {
-		width: 120px;
-		height: 120px;
+		width: 75%;
+		height: 75%;
 		fill: $white;
 	}
+}
+
+#page-top > .row:nth-of-type(odd) {
+	@extend .bg-light;
 }
