Removed the portfolio link.

--- a/_layouts/section-carousel.html
+++ b/_layouts/section-carousel.html
@@ -1,4 +1,4 @@
-<div id="{{ page.anchor }}" class="row align-items-center">
+<div class="row">
 	<div class="col px-0">
 
 <div id="portfolio_carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
@@ -23,6 +23,5 @@
 	</button>
 </div>
 
-		<div>{{ content }}</div>
 	</div>
 </div>
