--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,16 +21,37 @@
 		<!-- Navigation -->
 		<nav id="page-nav" class="navbar fixed-top navbar-expand-md navbar-light bg-light">
 			<div class="container-fluid">
-				<a class="navbar-brand text-primary" href="#page-top">{{ site.title }}</a>
+				<a class="d-md-none navbar-brand text-primary" href="#page-top">{{ site.title }}</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="flex-fill"></div>
-					<div class="navbar-nav">
+					<div class="navbar-nav mx-auto d-none d-md-flex">
+						<a class="nav-link" href="#about">About</a>
+						<a class="nav-link" href="#services">Services</a>
+						<a class="nav-link navbar-brand text-primary d-none d-md-inline" href="#page-top">{{ site.title }}</a>
+						
+						<a class="nav-link" href="#pricing">Pricing</a>
+						<a class="nav-link" href="#contact">Contact Me</a>
+						{% comment %}
 						{% for section in site.sections %}
 						<a class="nav-link" href="#{{ section.anchor }}">{{ section.title }}</a>
 						{% endfor %}
+						{% endcomment %}
+					</div>
+					<div id="navbarNavMenuMarkup" class="navbar-nav d-md-none vh-100">
+						<hr class="mt-auto mb-4 w-50 align-self-center" />
+						<a class="nav-link my-4" href="#about">About</a>
+						<a class="nav-link my-4" href="#services">Services</a>
+						<a class="nav-link my-4" href="#pricing">Pricing</a>
+						<a class="nav-link my-4" href="#contact">Contact Me</a>
+
+						<hr class="my-4 w-50 align-self-center"/>
+						<div class="mb-auto mt-4 text-center">
+						{% for network in site.social %}
+						<a href="{{ network.url }}"><i class="bi-{{ network.title }}"></i></a>
+						{% endfor %}
+						</div>
 					</div>
 				</div>
 			</div>
