--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,11 @@ body {
 	padding-bottom: 56px;
 }
 
+#carousel {
+	overflow-x: auto;
+	white-space: nowrap;
+}
+
 .my-circle {
 	@extend .d-inline-flex;
 	@extend .justify-content-center;
