Integrated tiny-slider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,10 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+		<!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
+
 	</head>
 
 	<body data-bs-spy="scroll" data-bs-target="#page-nav" data-bs-offset="0" tabindex="0">
@@ -80,6 +84,9 @@
 		</footer>
 
 		<script src="js/bootstrap-5.1.3.bundle.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+		<!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
+
 		<script src="script.js"></script>
 	</body>
 </html>
