--- a/style.scss
+++ b/style.scss
@@ -7,13 +7,12 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
 body {
-	margin-top: 56px;
+	padding-top: 56px;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 .navbar-brand {
 	font-family: "Kaushan Script";
-	@extend .me-0;
 }
 .nav-link {
 	@extend .text-center;
@@ -22,20 +21,16 @@ body {
 	padding-bottom: 56px;
 }
 
-#carousel {
-	overflow-x: auto;
-	white-space: nowrap;
-}
 
 .service-circle {
 	width: 300px;
 	height: 300px;
+
+	//@extend .text-primary;
+	@extend .h1;
+	@extend .text-decoration-none;
 }
 
 #sections > .row:nth-of-type(odd) {
 	@extend .bg-light;
-}
-
-.section-gallery {
-	
 }
