--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 			</div>
 		</footer>
 
-		<script src="/js/bootstrap-5.1.3.bundle.min.js"></script>
+		<script src="/vendor/bootstrap-5.1.3.bundle.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 		<!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
 		<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
