--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,43 +22,48 @@
 
 	<body id="page-top">
 
+		<div id="navbarNavAltMarkup" class="collapse position-fixed top-0 w-100 vh-100 bg-white">
+			<div class="d-flex flex-column h-100 align-items-center">
+				<hr class="mt-auto mb-4 w-50 align-self-center" />
+
+				<a class="nav-link my-4" href="#section-about"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">About</span></a>
+
+				<a class="nav-link my-4" href="#section-services"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Services</span></a>
+				<a class="nav-link my-4" href="#section-pricing"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Pricing</span></a>
+				<a class="nav-link my-4" href="#section-contact"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Contact Me</span></a>
+
+				<hr class="my-4 w-50 align-self-center"/>
+				<div class="mb-auto mt-4">
+				{% include social-media-block.html %}
+				</div>
+
+			</div>
+		</div>
+
 		<!-- Navigation -->
 		<nav id="page-nav" class="navbar fixed-top navbar-expand-md navbar-light bg-light">
+		
 			<div class="container-fluid">
-				<a class="d-md-none navbar-brand text-primary" href="/#page-top">{{ site.title }}</a>
+
+				<a class="d-md-none navbar-brand text-primary me-0 px-2" href="#page-top">{{ site.title }}</a>
+
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav mx-auto d-none d-md-flex">
-						<a class="nav-link" href="/#section-about">About</a>
-						<a class="nav-link" href="/#section-services">Services</a>
-						<a class="navbar-brand text-primary d-none d-md-inline ms-3" href="/#page-top">{{ site.title }}</a>
-						
-						<a class="nav-link" href="/#section-pricing">Pricing</a>
-						<a class="nav-link" href="/#section-contact">Contact Me</a>
-						{% comment %}
-						{% for section in site.sections %}
-						<a class="nav-link" href="/#{{ section.anchor }}">{{ section.title }}</a>
-						{% endfor %}
-						{% endcomment %}
-					</div>
-					<div id="navbarNavMenuMarkup" class="navbar-nav d-md-none vh-100">
-						<hr class="mt-auto mb-4 w-50 align-self-center" />
-						<a class="nav-link my-4" href="/#section-about">About</a>
-						<a class="nav-link my-4" href="/#section-services">Services</a>
-						<a class="nav-link my-4" href="/#section-pricing">Pricing</a>
-						<a class="nav-link my-4" href="/#section-contact">Contact Me</a>
 
-						<hr class="my-4 w-50 align-self-center"/>
-						<div class="mb-auto mt-4">
-						{% include social-media-block.html %}
-						</div>
+				<div class="collapse navbar-collapse justify-content-center">
+					<div class="navbar-nav">
+						<a class="nav-link" href="#section-about">About</a>
+						<a class="nav-link" href="#section-services">Services</a>
+						<a class="navbar-brand text-primary me-0 px-2" href="#page-top">{{ site.title }}</a>
+						<a class="nav-link" href="#section-pricing">Pricing</a>
+						<a class="nav-link" href="#section-contact">Contact Me</a>
 					</div>
 				</div>
+
 			</div>
 		</nav>
-		
+
 		{{ content }}
 
 		<footer class="container-fluid">
@@ -77,6 +82,7 @@
 				</div>
 			</div>
 		</footer>
+
 
 		<script src="/vendor/bootstrap-5.1.3.bundle.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
