--- a/_layouts/section-centered.html
+++ b/_layouts/section-centered.html
@@ -1,7 +1,7 @@
 <div class="container my-5 py-5">
 	<div class="row text-center">
 		<div class="col">
-			<h1 class="text-uppercase">{{ page.title }}</h1>
+			<h1 class="">{{ page.title }}</h1>
 			<p class="fst-italic text-muted">{{ page.subtitle }}</p>
 			<div>{{ content }}</div>
 		</div>
