--- a/style.scss
+++ b/style.scss
@@ -6,19 +6,20 @@
 @import "bootstrap-5.1.3/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
-body {
-	padding-top: 56px;
+body, #navbarNavAltMarkup {
+	padding-top: 3.5rem;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 .navbar-brand {
 	font-family: "Kaushan Script";
 }
-.nav-link {
-	@extend .text-center;
-}
-#navbarNavMenuMarkup {
-	padding-bottom: 56px;
+//.nav-link {
+//	@extend .text-center;
+//}
+
+#navbarNavAltMarkup {
+	z-index: $zindex-dropdown;
 }
 
 #section-gallery {
