--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,15 @@
 
 	<body id="page-top">
 
+		<!-- Fullscreen nav menu -->
 		<div id="navbarNavAltMarkup" class="collapse position-fixed top-0 w-100 vh-100 bg-white">
 			<div class="d-flex flex-column h-100 align-items-center">
 				<hr class="mt-auto mb-4 w-50 align-self-center" />
 
-				<a class="nav-link my-4" href="#section-about"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">About</span></a>
-
-				<a class="nav-link my-4" href="#section-services"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Services</span></a>
-				<a class="nav-link my-4" href="#section-pricing"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Pricing</span></a>
-				<a class="nav-link my-4" href="#section-contact"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Contact Me</span></a>
+				<a class="nav-link my-4" href="/#section-about"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">About</span></a>
+				<a class="nav-link my-4" href="/#section-services"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Services</span></a>
+				<a class="nav-link my-4" href="/#section-pricing"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Pricing</span></a>
+				<a class="nav-link my-4" href="/#section-contact"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">Contact Me</span></a>
 
 				<hr class="my-4 w-50 align-self-center"/>
 				<div class="mb-auto mt-4">
@@ -45,7 +45,7 @@
 		
 			<div class="container-fluid">
 
-				<a class="d-md-none navbar-brand text-primary me-0 px-2" href="#page-top">{{ site.title }}</a>
+				<a class="d-md-none navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -53,11 +53,11 @@
 
 				<div class="collapse navbar-collapse justify-content-center">
 					<div class="navbar-nav">
-						<a class="nav-link" href="#section-about">About</a>
-						<a class="nav-link" href="#section-services">Services</a>
-						<a class="navbar-brand text-primary me-0 px-2" href="#page-top">{{ site.title }}</a>
-						<a class="nav-link" href="#section-pricing">Pricing</a>
-						<a class="nav-link" href="#section-contact">Contact Me</a>
+						<a class="nav-link" href="/#section-about">About</a>
+						<a class="nav-link" href="/#section-services">Services</a>
+						<a class="navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
+						<a class="nav-link" href="/#section-pricing">Pricing</a>
+						<a class="nav-link" href="/#section-contact">Contact Me</a>
 					</div>
 				</div>
 
