Added the aria stuff to the fullscreen menu.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 				<hr class="mt-auto mb-3 w-50 align-self-center" />
 
 				{% for section in site.sections %}{% if section.menutitle %}
-				<a class="nav-link my-3" href="/#{{section.anchor}}"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">{{ section.menutitle }}</span></a>
+				<a class="nav-link my-3" href="/#{{section.anchor}}"><span data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">{{ section.menutitle }}</span></a>
 				{% endif %}{% endfor %}
 				
 
