Reorganizing to make styling easier.

--- a/_layouts/section-centered.html
+++ b/_layouts/section-centered.html
@@ -1,9 +1,9 @@
 <div class="container my-5 py-5">
 	<div class="row text-center">
 		<div class="col">
-			<h1 class="">{{ page.title }}</h1>
-			<p class="fst-italic text-muted">{{ page.subtitle }}</p>
-			<div>{{ content }}</div>
+			<h1 class="section-title">{{ page.title }}</h1>
+			<p class="section-subtitle">{{ page.subtitle }}</p>
+			<div class="section-content">{{ content }}</div>
 		</div>
 	</div>
 </div>
