--- a/style.scss
+++ b/style.scss
@@ -14,13 +14,17 @@ body, #navbarNavAltMarkup {
 	z-index: $zindex-dropdown;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-.navbar-brand {
-	font-family: "Kaushan Script";
-}
-
 #gallery {
 	min-height: 600px;
+}
+
+.service-circle {
+	width: 180px;
+	height: 180px;
+	@include media-breakpoint-up(md) {
+		width: 300px;
+		height: 300px;
+	}
 }
 
 .parallax {
@@ -34,23 +38,47 @@ body, #navbarNavAltMarkup {
 	opacity: 0.5;
 }
 
-.service-circle {
-	width: 180px;
-	height: 180px;
-	@include media-breakpoint-up(md) {
-		width: 300px;
-		height: 300px;
-	}
+/**
 
-	//@extend .text-primary;
-	@extend .h1;
-	@extend .text-decoration-none;
+	Import fonts here!
+
+**/
+//@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
+
+
+.navbar-brand {
+	font-family: 'Emilys Candy', cursive;
 }
+
+.section-content {
+	//font-family: 'Playfair Display', serif;
+	font-family: 'EB Garamond', serif;
+}
+
+.section-title {
+	font-family: 'Dancing Script', cursive;
+}
+
+.section-subtitle {
+	@extend .small;
+	@extend .text-muted;
+	@extend .fst-italic;
+}
+
+.service-circle {
+	@extend .text-decoration-none;
+	@extend .display-3;
+
+	font-family: 'Dancing Script', cursive;
+}
+
+
 
 // #sections > .row:nth-of-type(odd) {
 // 	@extend .bg-light;
 // }
 
-// #sections > .row:nth-of-type(even) {
-// 	@extend .bg-white;
-// }
