Added a brand css class.

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
 
 
-.navbar-brand {
+.brand {
 	font-family: 'Emilys Candy', cursive;
 }
 
