--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 		
 			<div class="container-fluid">
 
-				<a class="d-md-none navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
+				<a class="d-md-none brand navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
 					<div class="navbar-nav">
 						<a class="nav-link" href="/#about">About</a>
 						<a class="nav-link" href="/#services">Services</a>
-						<a class="navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
+						<a class="brand navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
 						<a class="nav-link" href="/#pricing">Pricing</a>
 						<a class="nav-link" href="/#contact">Contact Me</a>
 					</div>
