Renamed a front matter variable.

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -35,3 +35,11 @@
 
 	font-family: 'Dancing Script', cursive;
 }
+
+.page-heading {
+	font-family: 'Dancing Script', cursive;
+}
+
+.page-content {
+	font-family: 'EB Garamond', serif;
+}
