--- a/_layouts/page-gallery.html
+++ b/_layouts/page-gallery.html
@@ -4,9 +4,9 @@ layout: default
 <div class="container">
     <div class="row my-5">
         <div class="col text-center">
-            <h3>{{ page.lead }}</h3>
+            <h3 class="page-heading">{{ page.heading }}</h3>
             <hr class="w-25 mx-auto my-5"/>
-            {{ content }}
+            <div class="page-content">{{ content }}</div>
         </div>
     </div>
     {% assign images = site.static_files | where: "gallery", true %}
