--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ body, #navbarNavAltMarkup {
 	min-height: 600px;
 }
 
-.service-circle {
+.service-card {
 	width: 180px;
 	height: 180px;
 	@include media-breakpoint-up(md) {
