--- a/style.scss
+++ b/style.scss
@@ -18,14 +18,14 @@ body, #navbarNavAltMarkup {
 	min-height: 600px;
 }
 
-.service-card {
-	width: 180px;
-	height: 180px;
-	@include media-breakpoint-up(md) {
-		width: 300px;
-		height: 300px;
-	}
-}
+// .service-card {
+// 	width: 180px;
+// 	height: 180px;
+// 	@include media-breakpoint-up(md) {
+// 		width: 300px;
+// 		height: 300px;
+// 	}
+// }
 
 .parallax {
 	position: absolute;
