Service cards are setup.

--- a/_layouts/service-card.html
+++ b/_layouts/service-card.html
@@ -1,4 +1,4 @@
-<div class="service-card card mx-auto" style="width:18rem;">
+<div class="service-card card mx-auto my-4" style="width:18rem;">
     <img src="{% link {{ page.image }} %}" class="card-img-top" />
     <div class="card-body">
         <h5 class="card-title">{{ page.title }}</h5>
