--- a/_layouts/service-card.html
+++ b/_layouts/service-card.html
@@ -1,7 +1,9 @@
-<div class="service-card card mx-auto my-4" style="width:18rem;">
-    <img src="{% link {{ page.image }} %}" class="card-img-top" />
-    <div class="card-body">
-        <h5 class="card-title">{{ page.title }}</h5>
-        <p class="card-text">{{ content }}</p>
+<a class="text-reset text-decoration-none" href="{% link {{ page.link }} %}">
+    <div class="service-card card mx-auto my-4" style="width:18rem;">
+        <img src="{% link {{ page.image }} %}" class="card-img-top" />
+        <div class="card-body">
+            <h5 class="card-title">{{ page.title }}</h5>
+            <p class="card-text">{{ content }}</p>
+        </div>
     </div>
-</div>
+</a>
