Cleaning up, doing some commenting.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
 
 				<div class="collapse navbar-collapse justify-content-center">
 					<div class="navbar-nav">
+						<!-- this sucks, what if the section anchor changes? -->
 						<a class="nav-link" href="/#about">About</a>
 						<a class="nav-link" href="/#services">Services</a>
 						<a class="brand navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
