Commented some more.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,10 @@
 			</div>
 		</nav>
 
+		<!-- Content -->
 		{{ content }}
 
+		<!-- Footer -->
 		<footer class="container-fluid">
 			<div class="row">
 				<div class="col">
