--- a/_layouts/section-centered.html
+++ b/_layouts/section-centered.html
@@ -1,4 +1,4 @@
-<div class="container my-5 py-5">
+<div class="container my-5">
 	<div class="row text-center">
 		<div class="col">
 			<h1 class="section-title">{{ page.title }}</h1>
