--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -4,7 +4,7 @@
 
 **/
 //@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-//@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap'); //font-family: 'Playfair Display', serif;
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
@@ -15,7 +15,6 @@
 }
 
 .section-content {
-	//font-family: 'Playfair Display', serif;
 	font-family: 'EB Garamond', serif;
 }
 
@@ -31,9 +30,13 @@
 
 .service-card {
 	.card-title {
-		font-family: 'EB Garamond', serif;
+		font-family: 'Dancing Script', cursive;
 		@extend .display-5;
 		@extend .text-center;
+	}
+
+	.card-body {
+		font-family: 'EB Garamond', serif;
 	}
 }
 
