--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	<body id="page-top">
 
 		<!-- Fullscreen nav menu -->
-		<div id="navbarNavAltMarkup" class="collapse position-fixed top-0 w-100 vh-100 bg-white">
+		<div id="navbarNavAltMarkup" class="collapse position-fixed top-0 w-100 vh-100">
 			<div class="d-flex flex-column h-100 align-items-center">
 				{% include divider-heart.svg %}
 				<!-- <hr class="mt-auto mb-3 w-50 align-self-center" /> -->
@@ -41,13 +41,13 @@
 		</div>
 
 		<!-- Navigation -->
-		<nav id="page-nav" class="navbar fixed-top navbar-expand-md navbar-light bg-light">
+		<nav id="page-nav" class="navbar fixed-top navbar-expand-md navbar-light">
 		
 			<div class="container-fluid">
 
 				<a class="d-md-none brand navbar-brand text-primary me-0 px-2" href="/#page-top">{{ site.title }}</a>
 
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
