Working on the carousel.

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,12 @@ body {
 }
 
 #carousel {
-	
+	/* hide scrollbar but allow scrolling */
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+#carousel::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 
 // .service-card {
